@@ -194,6 +194,11 @@ These scripts can then be saved as stand-alone executable applications.
 iTerm also supports autolaunching of an Applescript on startup. On startup, iTerm looks for an Applescript called <b>"AutoLaunch.scpt"</b> under <b>~/Library/Application Support/iTerm</b>. If it is found, the <b>AutoLauch.scpt</b> is launched and executed. This feature can be used to launch multiple sessions in defined windows and tabs when iTerm starts up.
 </UL>
 
+<FONT SIZE="5"><STRONG>User defined scripts:</STRONG></FONT><BR>
+<UL>
+iTerm also supports launching of user defined scripts from the "Scripts" menu. The scripts need to be stored under the "~/Library/Application Support/iTerm/Scripts" directory. You can create this directory if it does not already exist. iTerm checks this directory on startup.
+</UL>
+
 
 </TD>
 </TR>
@@ -201,7 +206,7 @@ iTerm also supports autolaunching of an Applescript on startup. On startup, iTer
 
 <BR>
 <FONT SIZE="-1">
-Modified: Sep 26th, 2003<BR>Created: Dec 18th, 2002<BR>
+Modified: Oct 5, 2003<BR>Created: Dec 18th, 2002<BR>
 <A HREF="MAILTO:fabian_at_macvillage_dot_net">Fabian</A> and <A HREF="MAILTO:ujwal_at_setlurgroup_dot_com">Ujwal S. Sathyam</A><BR>
 Support free software by writing one.<BR>
 </FONT>
